# mav_pixhawk_px4

./: .gitmodules  CLAUDE.md  README.md  justfile  px4_v1.16.0_default.params  requirements.txt
config/: check_params.py  configure_telem2.py  list_all_params.py  reboot_pixhawk.py
cpp/: .gitignore  CMakeLists.txt
cpp/src/: config.cpp  config.hpp  main.cpp
cpp/src/mavlink/: rc_telemetry.cpp  rc_telemetry.hpp
cpp/src/mavsdk/: .gitkeep  heartbeat_monitor.cpp
python/: requirements.txt
python/src/: baud_scan.py  config.py  configure_mav0_telem2.py  diagnostics.py  main.py  param_dump.py  pixhawk.py  uart_loopback_test.py
python/src/common/: __init__.py  constants.py  env.py
python/src/config/: __init__.py  connection.py  pixhawk.py
python/src/mavlink/: config.py  connection.py  heartbeat.py  parameters.py
python/src/mavlink/telemetry/: ekf.py  heartbeat.py  rc_channels.py
python/src/mavsdk/: __init__.py  connection.py
python/src/mavsdk/commands/: flight.py  shell.py
python/src/mavsdk/telemetry/: __init__.py  ekf.py
src/: __init__.py  config.py  main.py
src/commands/: __init__.py  flight.py  offboard.py  shell.py
src/core/: __init__.py  connection.py
src/mavlink/: __init__.py  config.py  connection.py
src/mavlink/telemetry/: __init__.py  rc_channels.py
src/mavsdk/: config.py  connection.py
src/mavsdk/commands/: __init__.py  offboard.py
src/mavsdk/telemetry/: ekf.py
src/telemetry/: __init__.py  ekf.py
